[package]
name = "lalrpop-lambda"
description = "A λ-calculus grammar writting with LALRPOP."
repository = "https://github.com/nixpulvis/lalrpop-lambda"
version = "0.6.1"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lalrpop-util = "0.17.0"
regex = "0.2.0"
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
lalrpop = "0.17.0"

[dev-dependencies]
pretty_assertions = "0.6"
criterion = "0.2"

[[bench]]
name = "numerals"
harness = false
