[package]
name = "lalrpop-lambda"
description = "A λ-calculus grammar writting with LALRPOP."
repository = "https://github.com/nixpulvis/lalrpop-lambda"
version = "0.6.1"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lalrpop-util = "*"
regex = "*"
wasm-bindgen = { version = "*", optional = true }

[build-dependencies]
lalrpop = "*"

[dev-dependencies]
pretty_assertions = "*"
criterion = "*"

[[bench]]
name = "numerals"
harness = false
