[package]
name = "lalrpop-lambda"
description = "A λ-calculus grammar writting with LALRPOP."
repository = "https://github.com/nixpulvis/lalrpop-lambda"
version = "0.6.1"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lalrpop-util = "0.18.1"
regex = "1.3.6"
wasm-bindgen = { version = "0.2.60", optional = true }
pretty_assertions = "0.6.1"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "numerals"
harness = false
